--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -14,104 +14,167 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPlainTextEdit" name="editOpenedFile">
+   <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>20</y>
-      <width>251</width>
-      <height>31</height>
+      <x>10</x>
+      <y>10</y>
+      <width>791</width>
+      <height>81</height>
      </rect>
     </property>
-    <property name="readOnly">
-     <bool>true</bool>
+    <property name="title">
+     <string>Data File</string>
     </property>
-   </widget>
-   <widget class="QPushButton" name="buttonOpenFilePicker">
-    <property name="geometry">
-     <rect>
-      <x>310</x>
-      <y>20</y>
-      <width>80</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Open File...</string>
-    </property>
-   </widget>
-   <widget class="QTabWidget" name="tabData">
-    <property name="geometry">
-     <rect>
-      <x>330</x>
-      <y>90</y>
-      <width>481</width>
-      <height>431</height>
-     </rect>
-    </property>
-    <property name="currentIndex">
-     <number>0</number>
-    </property>
-    <widget class="QWidget" name="tabByMonth">
-     <attribute name="title">
-      <string>by Month</string>
-     </attribute>
-     <widget class="QTableWidget" name="tableByMonth">
-      <property name="geometry">
-       <rect>
-        <x>5</x>
-        <y>11</y>
-        <width>461</width>
-        <height>381</height>
-       </rect>
-      </property>
-      <property name="alternatingRowColors">
-       <bool>true</bool>
-      </property>
-      <property name="selectionMode">
-       <enum>QAbstractItemView::SingleSelection</enum>
-      </property>
-      <property name="selectionBehavior">
-       <enum>QAbstractItemView::SelectColumns</enum>
-      </property>
-      <property name="columnCount">
-       <number>2</number>
-      </property>
-      <column/>
-      <column/>
-     </widget>
+    <widget class="QPlainTextEdit" name="editOpenedFile">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>30</y>
+       <width>681</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
     </widget>
-    <widget class="QWidget" name="tabByDay">
-     <attribute name="title">
-      <string>byDay</string>
-     </attribute>
+    <widget class="QPushButton" name="buttonOpenFilePicker">
+     <property name="geometry">
+      <rect>
+       <x>700</x>
+       <y>30</y>
+       <width>80</width>
+       <height>22</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Open File...</string>
+     </property>
     </widget>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QGroupBox" name="groupBox_2">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>160</y>
-      <width>57</width>
-      <height>14</height>
+      <y>90</y>
+      <width>291</width>
+      <height>211</height>
      </rect>
     </property>
-    <property name="text">
-     <string>Total:</string>
+    <property name="title">
+     <string>Summary</string>
     </property>
+    <widget class="QWidget" name="formLayoutWidget">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>30</y>
+       <width>271</width>
+       <height>171</height>
+      </rect>
+     </property>
+     <layout class="QFormLayout" name="formLayout">
+      <item row="0" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Total:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QLabel" name="labelOvertimeSummary">
+        <property name="text">
+         <string>+sum will be here</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
    </widget>
-   <widget class="QLabel" name="labelOvertimeSummary">
+   <widget class="QGroupBox" name="groupBox_3">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>160</y>
-      <width>131</width>
-      <height>16</height>
+      <x>320</x>
+      <y>100</y>
+      <width>471</width>
+      <height>281</height>
      </rect>
     </property>
-    <property name="text">
-     <string>+sum will be here</string>
+    <property name="title">
+     <string>Detailed Data</string>
     </property>
+    <widget class="QTabWidget" name="tabData">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>20</y>
+       <width>451</width>
+       <height>261</height>
+      </rect>
+     </property>
+     <property name="currentIndex">
+      <number>1</number>
+     </property>
+     <widget class="QWidget" name="tabByMonth">
+      <attribute name="title">
+       <string>by Month</string>
+      </attribute>
+      <widget class="QTableWidget" name="tableByMonth">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>10</y>
+         <width>431</width>
+         <height>211</height>
+        </rect>
+       </property>
+       <property name="alternatingRowColors">
+        <bool>true</bool>
+       </property>
+       <property name="selectionMode">
+        <enum>QAbstractItemView::SingleSelection</enum>
+       </property>
+       <property name="selectionBehavior">
+        <enum>QAbstractItemView::SelectRows</enum>
+       </property>
+       <property name="columnCount">
+        <number>2</number>
+       </property>
+       <column/>
+       <column/>
+      </widget>
+     </widget>
+     <widget class="QWidget" name="tabByDay">
+      <attribute name="title">
+       <string>byDay</string>
+      </attribute>
+      <widget class="QTableWidget" name="tableByDay">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>10</y>
+         <width>421</width>
+         <height>211</height>
+        </rect>
+       </property>
+       <property name="alternatingRowColors">
+        <bool>true</bool>
+       </property>
+       <property name="selectionMode">
+        <enum>QAbstractItemView::SingleSelection</enum>
+       </property>
+       <property name="selectionBehavior">
+        <enum>QAbstractItemView::SelectRows</enum>
+       </property>
+       <property name="columnCount">
+        <number>2</number>
+       </property>
+       <column/>
+       <column/>
+      </widget>
+     </widget>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
