Added edit and delete

--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -242,6 +242,38 @@
      <string>New Record...</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="pushButtonEditRecord">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>350</y>
+      <width>101</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Edit...</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButtonDeleteRecord">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>350</y>
+      <width>101</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Delete</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
