--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -33,22 +33,6 @@
     <property name="title">
      <string>Data File</string>
     </property>
-    <widget class="QPlainTextEdit" name="editOpenedFile">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>30</y>
-       <width>681</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="readOnly">
-      <bool>true</bool>
-     </property>
-     <property name="plainText">
-      <string/>
-     </property>
-    </widget>
     <widget class="QPushButton" name="buttonOpenFilePicker">
      <property name="geometry">
       <rect>
@@ -60,6 +44,16 @@
      </property>
      <property name="text">
       <string>Open File...</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="editOpenedFile">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>31</y>
+       <width>681</width>
+       <height>31</height>
+      </rect>
      </property>
     </widget>
    </widget>
